--- a/fastdfsdemo/src/main/resources/application.properties
+++ b/fastdfsdemo/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-server.port=801
+server.port=8101
 
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=20MB
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/dev?useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.url=jdbc:mysql://192.168.50.21:3306/fop_new_data?useSSL=false&useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.username=fop_new_logic
+#spring.datasource.password=Jhjf@123
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fop_new_data?useSSL=false&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=admin
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
-server.context-path=
+server.context-path=/demo1
+#downloadUrl=https://fopdemo.o-banks.com/demo1/download
+downloadUrl=192.168.213.128:8101/demo1/download
