--- a/fastdfsdemo/src/main/resources/fastdfs_client.conf
+++ b/fastdfsdemo/src/main/resources/fastdfs_client.conf
@@ -6,4 +6,6 @@ http.tracker_http_port = 8888
 http.anti_steal_token = no
 http_secret_key=
 tracker_server =192.168.213.128:22122
+# tracker_server = 0.0.0.0:22122
+# tracker_server = 172.18.0.1:22122
 default_group_name=group1
