--- a/fastdfsdemo/dfsserver/src/main/resources/application.properties
+++ b/fastdfsdemo/dfsserver/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-server.port=8101
-
-spring.http.multipart.max-file-size=10MB
-spring.http.multipart.max-request-size=20MB
+server.port=80
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -14,6 +11,16 @@ spring.datasource.password=admin
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
-server.context-path=/demo1
-#downloadUrl=https://fopdemo.o-banks.com/demo1/download
-downloadUrl=192.168.213.129:8101/demo1/download
+#mybatis的mapper.xml配置文件domain对象别名扫描路径
+mybatis.typeAliasesPackage=com.example.dfsapi.model
+
+spring.dubbo.application.name=dfs_provider
+spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
+#spring.dubbo.registry.register=false
+spring.dubbo.protocol.name=dubbo
+spring.dubbo.protocol.port=20888
+#spring.dubbo.protocol.name=hessian
+#spring.dubbo.protocol.port=20881
+#spring.dubbo.protocol.server=servlet
+#以上协议配置,经测试无效
+spring.dubbo.scan=com.example.dfsserver.impl
